--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
-    
+    <!--inicio do formulario-->
+        <div class="container">
+            <form id="form">
+                <input type="email" placeholder="E-mail" required><br><br>
+                <input type="password" placeholder="Senha" required><br><br><br>
+                <a id="bnt" href="segunda.html">Enviar</a>
+            </form>
+        </div><!--container-->
+    <!--Final do formulario-->
 </body>
 </html>
